--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "topojson": "^3.0.0",
     "webpack": "^3.5.4",
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
+    "d3": "^4.10.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
